# Python_PlaySEM

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TESTING.md  TUTORIAL.md  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  server_stderr.txt  squash_and_push.ps1
.github/workflows/: ci.yml  test-no-coverage.yml
archive/docs/: README.md
benchmark/: README.md  protocol_validation.py  validate_protocols.py
config/: README.md  __init__.py  device_coap.yaml  device_http.yaml  device_mqtt.yaml  device_upnp.yaml  devices.yaml  effects.yaml  mock_driver.py  protocols.yaml
docs/: CONTROL_PANEL_ARCHITECTURE.md  CONVENTIONS.md  DEVICE_TESTING_CHECKLIST.md  LIBRARY.md  MULTI_PROTOCOL_DISCOVERY.md  PHASE_3_HANDLERS.md  PROTOCOL_FIXES.md  README.md  REFACTORING.md  ROADMAP.md  UNIVERSAL_DRIVER_INTEGRATION.md  capabilities.md  index.md  mobile_device_setup.md  mqtt_broker_plan.md  ponytail-audit-2026-07-18.md
docs/archive/: DOCS_CLEANUP_REPORT.md  INTEGRATION_TESTING.md  PASSO_3_COMPLETO.md  PHASE2_COMPLETION.md  PHASE2_ENHANCEMENTS.md  PHASE_3D_COMPLETE.md  PROJECT_CLEANUP.md.bak  REFACTORING_COMPLETE.md  TESTING.md  archive-old.md
docs/demo_output/: baseline.txt
docs/development/: PRE_PUSH_RULES.md  PROTOCOL_FIXES.md  PROTOCOL_TESTING.md  README.md  SERIAL_TESTING_GUIDE.md  TOOLS_README.md
docs/guides/: CONTROL_PANEL_GUIDE.md  MOBILE_PHONE_SETUP.md  UPNP_GUIDE.md  core_guide.md  custom_driver.md  devices.md  production_hardening.md  protocol_testing.md  quick-start.md  testing.md  troubleshooting.md
docs/reference/: TIMELINE_PLAYER.md  TOOLS_TIMELINE_PLAYER.md  architecture.md  status.md
examples/: README.md  coap_server_demo.py  device_registry_demo.py  mock_device_demo.py  mqtt_server_demo.py  mqtt_server_demo_public.py  run_all_demos.py  simple_cli.py  test_mqtt_client.py  test_mqtt_client_public.py  timeline_demo.py  virtual_lab.py  websocket_client.html  websocket_server_demo.py
examples/clients/: get_capabilities.py  test_coap_client.py  test_mqtt_client.py  test_mqtt_client_public.py  test_upnp_client.py  test_upnp_control_client.py  test_websocket_client.py
examples/control_panel/: HOW_TO_TEST.md  PROTOCOL_TESTING.md  QUICKSTART.md  README.md  control_panel.html  control_panel_server.py
examples/demos/: coap_server_demo.py  driver_integration_demo.py  end_to_end_integration_demo.py  serial_driver_demo.py  timeline_demo.py  unified_server_demo.py  upnp_server_demo.py  virtual_serial_device.py  websocket_control_server.py  websocket_server_demo.py
examples/hardware/: README.md  serial_fan_demo.py
examples/platform/: QUICKSTART.md  README.md  basic_server.py  custom_handler_server.py  production_server.py
examples/protocols/: coap_demo.py  driver_demo.py  http_demo.py  mqtt_demo.py  server.py  upnp_demo.py  websocket_demo.py
examples/scenes/: __init__.py  thunderstorm.py
examples/server/: main.py  phone_tester_server.py
examples/ui/: controller.html  mobile_device.html  receiver.html  super_controller.html  super_receiver.html
examples/web/: phone_tester.html  websocket_client.html
gui/: README.md  __init__.py  app.py  app_controller.py  example_custom_protocols.py  quickstart.py
gui/protocols/: __init__.py  base_protocol.py  http_protocol.py  mqtt_protocol.py  protocol_factory.py  websocket_protocol.py
gui/ui/: __init__.py  connection_panel.py  device_panel.py  effect_panel.py  main_window.py  status_bar.py  styles.py
playsem/: __init__.py  command_envelope.py  config_loader.py  device_capabilities.py  device_manager.py  device_registry.py  effect_dispatcher.py  effect_metadata.py  testing.py  timeline.py
playsem/config/: __init__.py  loader.py
playsem/drivers/: __init__.py  base_driver.py  bluetooth_driver.py  mock_driver.py  mqtt_driver.py  retry_policy.py  rgb_light_driver.py  serial_driver.py  upnp_discovery.py
playsem/protocol_servers/: __init__.py  coap_server.py  http_server.py  mqtt_server.py  upnp_server.py  websocket_server.py
playsem/utils/: __init__.py  network.py  rate_limiter.py  serializer.py
scripts/: prepush.ps1  prepush.sh  run_tests.py
src/: config_loader.py  device_manager.py  effect_dispatcher.py  effect_metadata.py  main.py  protocol_server.py  timeline.py
src/device_driver/: __init__.py  base_driver.py  bluetooth_driver.py  driver_factory.py  mock_driver.py  mqtt_driver.py  serial_driver.py
src/protocol_servers/: __init__.py  coap_server.py  http_server.py  mqtt_server.py  upnp_server.py  websocket_server.py
tests/: conftest.py  test_automated_integration.py  test_capabilities.py  test_capability_validation.py  test_coap_server_integration.py  test_config_loader.py  test_config_loader_integration.py  test_control_panel_server.py  test_device_manager.py  test_device_manager_integration.py  test_device_registry.py  test_driver_resilience.py  test_effect_dispatcher.py  test_effect_dispatcher_integration.py  test_effect_metadata.py  test_gui_components.py  test_gui_modules.py  test_http_api_contract.py  test_integration.py  test_mqtt_broker.py  test_mqtt_server_integration.py  test_playwright_super_controller.py  test_protocol_server.py  test_protocol_servers.py  test_routing_integration.py  test_smoke_protocols.py  test_super_controller_ui.py  test_timeline.py  test_upnp_server.py  test_websocket_integration.py  test_websocket_server.py  wait.py
tests/gui/: conftest.py  test_gui_components.py  test_gui_modules.py  test_gui_modules.py.skip  test_playwright_super_controller.py  test_super_controller_ui.py
tests/integration/: conftest.py  test_all_protocol_handlers.py  test_automated_integration.py  test_control_panel_server.py  test_demo_folders.py  test_demo_scripts.py  test_end_to_end.py  test_integration.py  test_integration.py.skip  test_modular_app_factory.py  test_phase5_reference_driver_flow.py  test_resilience_failure_injection.py  test_routing_integration.py  test_smoke_protocols.py  test_system_scenarios.py  (+1 more)
tools/: mock_device_demo.py
(+101 files in other folders)
