[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonplaysem"
version = "0.1.0"
description = "Sensory Effect Media (SEM) playback system with multi-protocol support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PhelaPoscam", email = "aleph.camposdasilveira@tuni.fi"}
]
keywords = ["sensory-effects", "mqtt", "websocket", "coap", "upnp", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: Multimedia",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "xmltodict",
]

[project.optional-dependencies]
mqtt = [
    "paho-mqtt>=1.6.1",
    "amqtt",
]
coap = [
    "aiocoap>=0.4.7",
]
upnp = [
    "async-upnp-client>=0.36.0",
    "aiohttp>=3.8.0",
]
bluetooth = [
    "bleak>=0.21.0",
]
serial = [
    "pyserial>=3.5",
]
websocket = [
    "websockets>=12.0",
]
server = [
    "fastapi>=0.122.0",
    "starlette>=0.50.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "aiohttp-cors>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.8.0",
]
all = [
    "paho-mqtt>=1.6.1",
    "amqtt",
    "aiocoap>=0.4.7",
    "async-upnp-client>=0.36.0",
    "bleak>=0.21.0",
    "pyserial>=3.5",
    "websockets>=12.0",
    "aiohttp>=3.8.0",
    "fastapi>=0.122.0",
    "starlette>=0.50.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "aiohttp-cors>=0.7.0",
    "beautifulsoup4>=4.12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
    "pytest-timeout>=2.1.0",
    "black==25.11.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "httpx>=0.27.0",
    "playwright>=1.46.0",
    "pytest-playwright",
    "types-PyYAML",
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/PhelaPoscam/Python_PlaySEM"
Repository = "https://github.com/PhelaPoscam/Python_PlaySEM"
Issues = "https://github.com/PhelaPoscam/Python_PlaySEM/issues"

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["docs*", "examples*", "scripts*", "tests*", "pythonplaysem.egg-info*"] } }

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "F541"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]
